addUser module complete..now onto testing it

--- a/ProteinTrackerMVC/ProteinTrackerMVC/ProteinTrackerMVC.csproj
+++ b/ProteinTrackerMVC/ProteinTrackerMVC/ProteinTrackerMVC.csproj
@@ -155,6 +155,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\AddUser.cs" />
+    <Compile Include="Api\HelloService.cs" />
+    <Compile Include="Api\UserService.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -246,7 +249,9 @@
     <Content Include="Scripts\knockout-3.1.0.js" />
     <Content Include="Scripts\modernizr-2.7.2.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
